align navbar items horizontally to the right and fix styling

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap5-override.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap5-override.less
@@ -77,3 +77,9 @@
 //  background-color: #e6e6e6;
 //  border-color: #adadad;
 //}
+
+/*!* dropdown*/
+/*---------------------------- *!*/
+.navbar-nav .dropdown-menu {
+  position: absolute !important;
+}
